# etl-pipeline

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test.ipynb
etl_pipeline/: business_logic.py  extract.py  load.py  models.py  pipeline.py  transform.py
